# HyaiPaper

./: LICENSE  README.md  bun.lockb  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  nohup.out  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/template/: generate_template.rs  mod.rs
src/Components/: AllComponents.tsx  CustomResol.tsx  NavBar.tsx  WallpaperList.tsx
