[package]
name = "hyai_paper"
version = "1.0.0"
description = "an that let you change wallpapers fast"
authors = ["RodriDev23"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["protocol-asset", "fs-all", "dialog-confirm", "dialog-save", "shell-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
